# infinite_games

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  auto_update.sh  autoreg.py  docker-compose.dev.yaml  docker-compose.stg.yaml  events.pickle  min_compute.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.db  update_script.py  vali_permit.py  vstate.py
.devcontainer/: Dockerfile  aliases.sh  codespaces_init.sh  devcontainer.json  pre-commit  regen_test_wallet.sh
docs/: crypto-events.json  fred-events.txt  fred-weekly.json  miner.md  movie-events.json  peer-scoring.md  repricing-events.md  validator.md  wallet-setup.md  (+1 more)
infinite_forecast/: README.md  cli.py  pyproject.toml
infinite_forecast/api/: main.py
infinite_forecast/api/client/: infinite_games.py
infinite_forecast/api/core/: config.py  logging.py  security.py
infinite_forecast/api/models/: events.py  predictions.py  responses.py
infinite_forecast/api/routes/: events.py  ifgames.py  predictions.py  resolver.py
infinite_forecast/clients/: ifgames_client.py
infinite_forecast/config/: generator.yaml  miner.yaml  resolver.yaml
infinite_forecast/forecaster/: crypto_forecaster.py  main.py
infinite_forecast/miner/: crypto_miner.py
infinite_forecast/miner/forecasters/: base.py  crypto.py  crypto_forecaster.py  llm.py
infinite_forecast/miner/utils/: market_data.py
infinite_forecast/services/: ifgames_service.py
infinite_forecast/utils/api/: ifgames.py
infinite_forecast/utils/llm/: cache.py  client.py  ratelimit.py
(+257 files in other folders)
